[package]
name = "dbos-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for DBOS Transact"

[[bin]]
name = "dbos"
path = "src/main.rs"

[dependencies]
dbos-core = { path = "../dbos-core" }
dbos-server = { path = "../dbos-server" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
