[package]
name = "dbos-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
name = "dbos"
path = "src/lib.rs"

[features]
default = ["sqlite", "postgres"]
sqlite = []
postgres = []

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
arc-swap.workspace = true
cron.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "test-util"] }
tempfile.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
futures.workspace = true
serde.workspace = true
sqlx.workspace = true
