[package]
name = "dbos-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin HTTP server for DBOS Transact"

[dependencies]
dbos-core = { path = "../dbos-core" }
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "test-util"] }
reqwest.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
