[package]
name = "dbos-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Admin HTTP server and control-plane client for DBOS Transact (a Rust port of DBOS Transact)"
keywords.workspace = true
categories = ["asynchronous", "web-programming::http-server"]
readme = "README.md"

[dependencies]
dbos-core = { path = "../dbos-core", version = "0.1.0" }
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal", "test-util"] }
reqwest.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
